# damoa

./: .bazelignore  .bazelproject  .bazelrc  .editorconfig  .gitignore  .npmrc  BUILD.bazel  MODULE.bazel  README.md  biome.json  build.gradle  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: BUILD.bazel
apps/api/deploy/: deployspec.yml
apps/api/deploy/scripts/: after_install.sh  application_start.sh  application_stop.sh  validate_service.sh
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/: DamoaApplication.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/auth/: AuthController.kt  DataGsmClient.kt  DataGsmClientImpl.kt  DataGsmOAuthController.kt  DataGsmUser.kt  Jwt.kt  JwtAuthFilter.kt  JwtService.kt  JwtServiceImpl.kt  MeResponse.kt  OAuthStateStore.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/auth/controller/: AuthController.kt  DataGsmOAuthController.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/auth/dto/response/: DataGsmUser.kt  MeResponse.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/auth/filter/: JwtAuthFilter.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/auth/jwt/filter/: JwtAuthFilter.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/auth/jwt/service/: JwtService.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/auth/me/controller/: AuthController.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/auth/oauth/controller/: DataGsmOAuthController.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/auth/oauth/repository/: OAuthStateStore.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/auth/oauth/service/: DataGsmClient.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/auth/repository/: OAuthStateStore.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/auth/service/: DataGsmClient.kt  JwtService.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/auth/service/impl/: DataGsmClientImpl.kt  JwtServiceImpl.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/common/: SecurityUtil.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/config/: AppConfig.kt  AppProperties.kt  DataGsmProperties.kt  JpaConfig.kt  S3Config.kt  S3Properties.kt  SchedulingConfig.kt  SecurityConfig.kt  WebClientConfig.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/personae/ai/controller/: AiController.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/personae/ai/service/: AiService.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/personae/attachment/controller/: AttachmentController.kt  FileController.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/personae/attachment/scheduler/: AttachmentCleanupScheduler.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/personae/attachment/service/: AttachmentService.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/storage/: StorageService.kt  StorageServiceImpl.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/talkmaker/: AttachmentCleanupScheduler.kt  AttachmentController.kt  AttachmentService.kt  AttachmentServiceImpl.kt  FileController.kt  Message.kt  MessageController.kt  MessageRepository.kt  MessageRequest.kt  MessageResponse.kt  MessageService.kt  MessageServiceImpl.kt  OgController.kt  OgResponse.kt  OgService.kt  OgServiceImpl.kt  Persona.kt  PersonaController.kt  PersonaRepository.kt  PersonaRequest.kt  PersonaResponse.kt  PersonaService.kt  PersonaServiceImpl.kt  Room.kt  RoomController.kt  RoomRepository.kt  RoomRequest.kt  RoomResponse.kt  RoomService.kt  RoomServiceImpl.kt  UploadResponse.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/talkmaker/controller/: AttachmentController.kt  FileController.kt  MessageController.kt  OgController.kt  PersonaController.kt  RoomController.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/talkmaker/entity/: Message.kt  Persona.kt  Room.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/talkmaker/repository/: MessageRepository.kt  PersonaRepository.kt  RoomRepository.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/talkmaker/scheduler/: AttachmentCleanupScheduler.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/talkmaker/service/: AttachmentService.kt  MessageService.kt  OgService.kt  PersonaService.kt  RoomService.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/user/: User.kt  UserRepository.kt  UserService.kt  UserServiceImpl.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/user/entity/: User.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/user/repository/: UserRepository.kt
apps/api/src/main/kotlin/io/github/snowykte0426/damoa/user/service/: UserService.kt
apps/api/src/main/resources/: application.yaml
apps/api/src/test/kotlin/io/github/snowykte0426/damoa/: DamoaApplicationTests.kt  JUnit5Runner.kt
apps/api/src/test/kotlin/io/github/snowykte0426/damoa/common/: SecurityUtilTest.kt
apps/web/: .env.production  BUILD.bazel  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  manifest.ts  page.tsx
apps/web/app/lab/[slug]/: page.tsx
apps/web/app/lab/orbit/: page.tsx
apps/web/app/lab/particles/: page.tsx
apps/web/app/lab/personae/: layout.tsx  page.tsx
apps/web/app/lab/personae/share/: route.ts
apps/web/app/lab/scroll/: page.tsx
apps/web/app/lab/shader/: page.tsx
apps/web/app/lab/swarm/: page.tsx
apps/web/app/lab/talkmaker/: layout.tsx  page.tsx
apps/web/app/lab/transitions/: page.tsx
apps/web/app/lab/type/: page.tsx
apps/web/app/personae.webmanifest/: route.ts
apps/web/app/talkmaker.webmanifest/: route.ts
apps/web/components/: boid-flock.tsx  dialog.tsx  gravity-orbits.tsx  icons.tsx  kinetic-type.tsx  particle-field.tsx  poster-wheel.tsx  scroll-stage.tsx  shader-field.tsx  sw-register.tsx  talk-search.tsx  talk-stats.tsx  theme-toggle.tsx
apps/web/lib/: api.ts  labs.ts  personae.ts  talkmaker.ts  theme.ts
apps/web/public/: sw.js
bazel/: BUILD.bazel  spring_boot.bzl
tools/springboot/: BUILD.bazel  BootRepackage.java
(+105 files in other folders)
