load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")
load("//bazel:spring_boot.bzl", "spring_boot_jar")

package(default_visibility = ["//visibility:public"])

_DEPS = [
    "@maven//:org_springframework_boot_spring_boot_starter",
    "@maven//:org_springframework_boot_spring_boot_starter_batch",
    "@maven//:org_springframework_boot_spring_boot_starter_data_jpa",
    "@maven//:org_springframework_boot_spring_boot_starter_data_redis",
    "@maven//:org_springframework_boot_spring_boot_starter_graphql",
    "@maven//:org_springframework_boot_spring_boot_starter_security",
    "@maven//:org_springframework_boot_spring_boot_starter_thymeleaf",
    "@maven//:org_springframework_boot_spring_boot_starter_webmvc",
    "@maven//:org_springframework_boot_spring_boot_starter_webclient",
    "@maven//:org_jetbrains_kotlin_kotlin_reflect",
    "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_reactor",
    "@maven//:io_projectreactor_kotlin_reactor_kotlin_extensions",
    "@maven//:org_thymeleaf_extras_thymeleaf_extras_springsecurity6",
    "@maven//:tools_jackson_module_jackson_module_kotlin",
    "@maven//:com_nimbusds_nimbus_jose_jwt",
    "@maven//:software_amazon_awssdk_s3",
    "@maven//:software_amazon_awssdk_url_connection_client",
]

_RUNTIME_DEPS = [
    "@maven//:com_mysql_mysql_connector_j",
]

kt_jvm_library(
    name = "lib",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    resources = glob(["src/main/resources/**"]),
    runtime_deps = _RUNTIME_DEPS,
    deps = _DEPS,
)

java_binary(
    name = "app",
    main_class = "io.github.snowykte0426.damoa.DamoaApplicationKt",
    runtime_deps = [":lib"],
)

spring_boot_jar(
    name = "boot_jar",
    app = ":lib",
    main_class = "io.github.snowykte0426.damoa.DamoaApplicationKt",
)

# JUnit 5 (Jupiter): kt_jvm_test defaults to the JUnit4 BazelTestRunner, which
# can't run Jupiter tests — point main_class at our platform-launcher entry
# point instead (see src/test/kotlin/.../JUnit5Runner.kt).
kt_jvm_test(
    name = "test",
    srcs = glob(["src/test/kotlin/**/*.kt"]),
    main_class = "io.github.snowykte0426.damoa.JUnit5Runner",
    runtime_deps = _RUNTIME_DEPS,
    deps = _DEPS + [
        ":lib",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit5",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_test",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_springframework_boot_spring_boot_starter_test",
    ],
)
