load("@aspect_rules_js//js:defs.bzl", "js_library", "js_run_devserver")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//apps/web:next/package_json.bzl", next_bin = "bin")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

_NEXT_SRCS = [
    ":node_modules",
    ":web_sources",
]

next_bin.next(
    name = "build",
    srcs = _NEXT_SRCS,
    args = ["build"],
    chdir = package_name(),
    env = {"NEXT_TELEMETRY_DISABLED": "1"},
    out_dirs = [".next"],
)

js_run_devserver(
    name = "dev",
    args = ["dev"],
    chdir = package_name(),
    data = _NEXT_SRCS,
    tool = ":node_modules/next/dir",
)

js_library(
    name = "web_sources",
    srcs = glob(
        [
            "app/**/*",
            "lib/**/*",
            "*.ts",
            "*.mjs",
            "*.json",
            "*.css",
        ],
        allow_empty = True,
    ),
)

exports_files(["package.json"])
